data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\90\80\80\80\00\01\03\65\6e\76\08"
    "\65\78\74\5f\66\75\6e\63\00\00\03\82\80\80\80\00"
    "\01\00\07\8c\80\80\80\00\01\08\65\78\70\5f\66\75"
    "\6e\63\00\01\0a\98\80\80\80\00\01\92\80\80\80\00"
    "\00\41\01\04\7f\41\03\10\00\10\00\05\41\02\10\01"
    "\0b\0b"
  )
""
)